--- a/config/database.yml
+++ b/config/database.yml
@@ -27,5 +27,5 @@ production:
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: sample_app_production
-  username: sample_app
+  username: sample_app_pg_user
   password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
