--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -43,21 +43,11 @@ jobs:
         run: bin/rake
 
 
-# TODO installl rubocop, brakeman, bundler-audit gems for this to work
-
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
-        with:
-          bundler-cache: true
-      # Add or replace any other lints here
-      #- name: Security audit dependencies
-      #  run: bin/bundler-audit --update
-      #- name: Security audit application code
-      #  run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: rubocop --parallel
+    - uses: actions/checkout@v2
+    - name: Rubocop Linter Action
+      uses: andrewmcodes/rubocop-linter-action@v3.0.0.rc2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
