--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# empty
+
+luke:
+  name: Luke Eller
+  email: lukey@example.com
+  password_digest: <%= User.digest('pass123') %>
