--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,3 +11,11 @@ brody:
   name: Lady Gaga
   email: brody@gmail.com
   password_digest: <%= User.digest('pass123') %>
+
+
+<% 40.times do |n| %>
+user_<%= n %>:
+  name: <%= Faker::Name.name %>
+  email: <%= "example-#{n}@railstutorial.org" %>
+  password_digest: <%= User.digest('pass123') %>
+<% end %>
