--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,3 +5,18 @@ luke:
   name: Luke Eller
   email: lukey@example.com
   password_digest: <%= User.digest('pass123') %>
+  admin: true
+
+
+brody:
+  name: Lady Gaga
+  email: brody@gmail.com
+  password_digest: <%= User.digest('pass123') %>
+
+
+<% 40.times do |n| %>
+user_<%= n %>:
+  name: <%= Faker::Name.name %>
+  email: <%= "example-#{n}@railstutorial.org" %>
+  password_digest: <%= User.digest('pass123') %>
+<% end %>
