--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,12 +6,16 @@ luke:
   email: lukey@example.com
   password_digest: <%= User.digest('pass123') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 
 brody:
   name: Lady Gaga
   email: brody@gmail.com
   password_digest: <%= User.digest('pass123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 
 <% 40.times do |n| %>
@@ -19,4 +23,6 @@ user_<%= n %>:
   name: <%= Faker::Name.name %>
   email: <%= "example-#{n}@railstutorial.org" %>
   password_digest: <%= User.digest('pass123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
