--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,7 +9,6 @@ luke:
   activated: true
   activated_at: <%= Time.zone.now %>
 
-
 brody:
   name: Lady Gaga
   email: brody@gmail.com
@@ -17,6 +16,11 @@ brody:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+unactivated:
+  name: Not Active
+  email: ugly_boy@gmail.com
+  password_digest: <%= User.digest('pass123') %>
+  activated: false
 
 <% 40.times do |n| %>
 user_<%= n %>:
